--- a/index.HTML
+++ b/index.HTML
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=divice-width" >
-      <Link rel="stylesheet" href="f:\ARD GLOBAL TRADERS\ARD Website\Style.CSS"></head>
+      <Link rel="stylesheet" href="style.CSS"></head>
         <BODY>
     
     
