--- a/index.HTML
+++ b/index.HTML
@@ -169,7 +169,7 @@
 
 <section id="form">
     <form class="contact-form" id="contactForm">
-        <label><Img src="f:\ARD GLOBAL TRADERS\ARD Website\pot2.1.png"height="40px"width="42px">Contact<Img src="f:\ARD GLOBAL TRADERS\ARD Website\pot2.png"height="40px"width="42px"></label>
+        <label><Img src="pot2.1.png"height="40px"width="42px">Contact<Img src="pot2.png"height="40px"width="42px"></label>
         <input type="text" id="name" name="name" placeholder="Your Name" required>
         <input type="email" id="email" name="email" placeholder="Your Email" required>
         <input type="text" id="subject" name="subject" placeholder="Subject" required>
@@ -245,7 +245,7 @@
 <p id="xx23"> Head Office:<br>
     15/231,Indra Colony,<br> 
     Near Sbi Bank,<br>
-    Trichy-6100001.</p>
+    Trichy-610000.</p>
 
 </div>
 
